--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -106,6 +106,67 @@ section h2 {
   font-size: 2rem;
 }
 
+/* ===== FORMAÇÃO ACADEMICA ===== */
+
+#formacao {
+  padding: 40px 0;
+  color: white;
+}
+
+#formacao h2 {
+  font-size: 2rem;
+  text-align: center;
+  margin-bottom: 40px;
+  position: relative;
+}
+
+.linha-tempo {
+  border-left: 3px solid #1DA1F2;
+  padding-left: 20px;
+  position: relative;
+}
+
+.item {
+  position: relative;
+  margin-bottom: 40px;
+}
+
+.periodo {
+  background-color: #1DA1F2;
+  color: white;
+  padding: 5px 15px;
+  border-radius: 20px;
+  display: inline-block;
+  font-weight: bold;
+  margin-bottom: 10px;
+  margin-top: 10px;
+}
+
+.conteudo {
+  background-color: #1a1a1a;
+  padding: 20px;
+  border-radius: 10px;
+  margin-top: 10px;
+}
+
+.conteudo h3 {
+  color: #1DA1F2;
+  margin-bottom: 5px;
+}
+
+.cargo {
+  font-style: italic;
+  margin-bottom: 10px;
+}
+
+#incompleto{
+  font-style: italic;
+  color: #a09c9c;
+}
+
+/* ===== HABILIDADES ===== */
+
+
 #habilidades ul {
   display: flex;
   gap: 1rem;
@@ -214,6 +275,9 @@ footer {
   color: #00bcd4;
 }
 
+hr{
+  border-color: #014d57;
+}
 
 @media (max-width: 768px) {
   nav ul {
