--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -136,7 +136,7 @@ hr{
 }
 
 .linha-tempo {
-  border-left: 3px solid #1DA1F2;
+  border-left: 3px solid #2eacfa;
   padding-left: 20px;
   position: relative;
 }
@@ -147,7 +147,7 @@ hr{
 }
 
 .periodo {
-  background-color: #1DA1F2;
+  background-color: #3b7dd3;
   color: white;
   padding: 5px 15px;
   border-radius: 20px;
@@ -165,7 +165,7 @@ hr{
 }
 
 .conteudo h3 {
-  color: #1DA1F2;
+  color: #1df2f2;
   margin-bottom: 5px;
 }
 
@@ -179,8 +179,62 @@ hr{
   color: #a09c9c;
 }
 
-/* ===== HABILIDADES ===== */
+/* ===== FORMAÇÃO PROFISSIONAL ===== */
 
+.grid-formacao {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+  gap: 20px;
+  justify-items: center;
+}
+
+.card-formacao {
+  background-color: #1a1a1a;
+  border-radius: 8px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+  padding: 20px;
+  position: relative;
+  text-align: left;
+  max-width: 300px;
+  margin-top: 25px;
+}
+
+.card-formacao .ano {
+  position: absolute;
+  top: -15px;
+  left: 15px;
+  background-color: #3b7dd3;
+  color: white;
+  padding: 5px 15px;
+  font-weight: bold;
+  border-radius: 0 0 5px 5px;
+}
+
+.card-formacao h3 {
+  margin-bottom: 5px;
+  font-size: 1.1em;
+}
+
+.card-formacao .instituicao {
+  font-style: italic;
+  color: rgb(180, 177, 177);
+  margin-bottom: 30px;
+  margin-top: 20px;
+}
+
+.card-formacao p {
+  color: white;
+  font-size: 0.95em;
+  line-height: 1.4em;
+}
+
+i {
+  margin-right: 1px;
+  color: #2393dd;
+}
+
+
+/* ===== HABILIDADES ===== */
 
 #habilidades {
   padding: 40px 20px;
