--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -262,6 +262,7 @@ i {
 .habilidade {
   text-align: center;
   width: 120px;
+  margin-top: 30px;
 }
 
 .habilidade img {
@@ -282,47 +283,60 @@ i {
 
 /* ===== PROJETOS ===== */
 
-.projeto {
-  background: #0d0d0d;
-  padding: 1rem;
-  border: 1px solid #ddd;
-  border-radius: 6px;
-  margin-bottom: 1rem;
-}
-
-.projeto a {
-  display: inline-block;
-  margin-top: 0.5rem;
-  color: #00bcd4;
-  text-decoration: none;
-}
-
-form {
+.grid-projetos {
   display: flex;
-  flex-direction: column;
-  gap: 1rem;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 40px;
 }
 
-input, textarea {
-  padding: 0.5rem;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  font-size: 1rem;
+.card {
+  background-color: #1a1a1a;
+  border-radius: 12px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+  overflow: hidden;
+  text-decoration: none;
+  color: inherit;
+  transition: transform 0.2s;
+  max-width: 320px;
+  display: block;
+  line-height: 0;
 }
 
-button {
-  background-color: #00bcd4;
-  color: #fff;
-  border: none;
-  padding: 0.75rem;
-  font-size: 1rem;
-  border-radius: 4px;
-  cursor: pointer;
-  transition: background-color 0.3s;
+.card img {
+  width: 100%;
+  height: 180px;
+  object-fit: cover;
+  display: block;
 }
 
-button:hover {
-  background-color: #0097a7;
+.card .conteudo {
+  padding: 15px;
+  text-align: left;
+  background-color: #1a1a1a;
+  line-height: normal;
+}
+
+.card h3 {
+  margin: 0 0 10px;
+  font-size: 1.1em;
+  font-weight: bold;
+  color: #00cfff;
+}
+
+.card p {
+  margin: 0;
+  color: #999898;
+  text-align: justify;
+}
+
+.card:hover {
+  transform: scale(1.03);
+  box-shadow: 0 8px 20px rgba(112, 112, 112, 0.4);
+}
+
+#topo, #topo2{
+  margin-top: 40px;
 }
 
 /* ===== CONTATOS ===== */
